fix: prevent the alignment breakage from inherited text-align style #880

--- a/components/combobox/src/styles/style.scss
+++ b/components/combobox/src/styles/style.scss
@@ -7,6 +7,7 @@
 
 :host {
   display: block;
+  text-align: left;
 
   [auro-input] {
     --ds-auro-input-container-color: transparent;
