--- a/components/dropdown/src/styles/style.scss
+++ b/components/dropdown/src/styles/style.scss
@@ -3,6 +3,7 @@
 :host {
   position: relative;
   display: block;
+  text-align: left;
 }
 
 :host([open]) {
