--- a/components/input/src/styles/default/style.scss
+++ b/components/input/src/styles/default/style.scss
@@ -29,6 +29,9 @@
 // Support for auroElement styles
 @use '@aurodesignsystem/webcorestylesheets/dist/auroElement/auroElement';
 
+:host {
+  text-align: left;
+}
 
 .layoutDefault,
 :host(:not([layout])) {
